5-VirtualService/vote-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-virtualservice
spec:
  hosts:
    - vote.apps.cluster-0f64.0f64.example.opentlc.com
  gateways:
    - vote-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vote.istio-vote.svc.cluster.local
        port:
          number: 80
